--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-redux-firebase": "^2.2.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "2.1.8",
+    "react-smooth-dnd": "^0.11.0",
     "redux": "^4.0.1",
     "redux-firestore": "^0.7.3",
     "redux-thunk": "^2.3.0"
